Fixes CSS bugs with 100% heights on small viewports

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,24 @@
 /* Normalize */
 
+/* Needed this: */
+/* https://medium.com/developer-rants/what-if-height-100vh-is-bigger-than-your-screen-7f39c62ac170 */
+
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.full-screen-div {
+    width: 100vw;
+    height: 100%;
+    min-height: 100%;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
 html {
     box-sizing: border-box;
     font-size: 16px;
@@ -180,7 +199,7 @@ button,
     #room-content {
         grid-area: content-area;
         background-color: #edeff0;
-        overflow-y: scroll;
+        overflow-y: hidden;
         border-bottom: 1px solid silver;
     }
 
@@ -221,8 +240,7 @@ button,
     #room-content-input {
         grid-area: footer-area;
         background-color: white;
-        max-height: 5rem;
-        padding: 1rem;
+        padding: 0.5rem;
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
@@ -284,11 +302,10 @@ button,
 /* Chatroom Layout */
 
 #chatroom {
-    /* background-color: #eb1700; */
     height: 100vh;
     display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 4rem 4rem calc(100vh - 12rem) 4rem;
+    grid-template-columns: 1fr;
+    grid-template-rows: 4rem 4rem 1fr 4rem;
     grid-template-areas:
         "nav-area"
         "header-area"
